samples/_failures_safe/1761129541_92a5b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a5571bb.c: In function ‘main’:
./samples/SAFE/__tmp_7a5571bb.c:147:20: error: missing terminating " character
  147 |             printf("
      |                    ^
./samples/SAFE/__tmp_7a5571bb.c:147:13: error: expected expression at end of input
  147 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_7a5571bb.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a5571bb.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a5571bb.c:147:13: error: expected declaration or statement at end of input
